<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultActivity">

    <!-- Kişisel Bilgiler Başlığı -->
    <TextView
        android:id="@+id/tv_personalInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personalInfo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Kişisel Bilgiler Textviewları -->
    <TextView
        android:id="@+id/tv_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="left"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_personalInfoTitle" />

    <TextView
        android:id="@+id/tv_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="@+id/tv_info1"
        app:layout_constraintTop_toBottomOf="@id/tv_info1" />

    <TextView
        android:id="@+id/tv_info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_info2"
        app:layout_constraintTop_toTopOf="@+id/tv_info2" />

    <TextView
        android:id="@+id/tv_info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="@+id/tv_info1"
        app:layout_constraintTop_toBottomOf="@+id/tv_info3" />

    <TextView
        android:id="@+id/tv_info5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_info4"
        app:layout_constraintTop_toTopOf="@+id/tv_info4" />

    <!-- Anket Cevapları Başlığı -->
    <TextView
        android:id="@+id/tv_surveyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surveyInfo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@id/tv_info4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Anket Cevapları Textviewları -->

    <TextView
        android:id="@+id/tv_info6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_surveyTitle" />

    <TextView
        android:id="@+id/tv_info7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_info6"
        app:layout_constraintTop_toTopOf="@+id/tv_info6" />

    <TextView
        android:id="@+id/tv_info8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="@id/tv_info6"
        app:layout_constraintTop_toBottomOf="@id/tv_info7" />

    <TextView
        android:id="@+id/tv_info9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:gravity="left"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_info8"
        app:layout_constraintTop_toTopOf="@+id/tv_info8" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info9" />


</androidx.constraintlayout.widget.ConstraintLayout>